vlib/v/checker/tests/immutable_field.v
struct A {
pub:
	i1 int
}

fn main() {
	a := A{1}
	a.i1 = 2
}
